subprojects {
    apply plugin: 'java'
    apply plugin: 'java-library'

    group = 'com.github.lemadane.piped-template-engine-java'
    version = '0.1.1'

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(17)
        }
    }

    repositories {
        mavenCentral()
    }

    tasks.withType(Test).configureEach {
        useJUnitPlatform()
        jvmArgs '-XX:+EnableDynamicAgentLoading'
        testLogging {
            events "started", "passed", "skipped", "failed"
            exceptionFormat "full"
            showStandardStreams = true
        }
    }
}

configure(subprojects.findAll { it.name.startsWith('piped-template-engine-') }) {
    apply plugin: 'maven-publish'

    publishing {
        publications {
            mavenJava(MavenPublication) {
                from components.java
            }
        }
    }
}